log
sá.,  9 de abr. de 2022 19:23:56: 
 hashmap.c | 40 +++++++++++++++++++++++++++++++++++++---
 1 file changed, 37 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:78:10: error: unused variable 'i' [-Werror=unused-variable]
     long i = hash(key, map->capacity);
          ^
cc1.exe: all warnings being treated as errors
Compilation failed
8910fc5
sá.,  9 de abr. de 2022 19:24:28: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:78:10: error: unused variable 'i' [-Werror=unused-variable]
     long i = hash(key, map->capacity);
          ^
hashmap.c: In function 'searchMap':
hashmap.c:92:5: error: statement with no effect [-Werror=unused-value]
     for (i ;i < map->capacity ; i++){
     ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
30acc1a
sá.,  9 de abr. de 2022 19:25:33: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:78:10: error: unused variable 'i' [-Werror=unused-variable]
     long i = hash(key, map->capacity);
          ^
cc1.exe: all warnings being treated as errors
Compilation failed
b6f7f9e
sá.,  9 de abr. de 2022 19:25:56: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
8a0c03e
sá.,  9 de abr. de 2022 19:30:49: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
f3aa0b2
sá.,  9 de abr. de 2022 19:35:23: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:77:10: error: unused variable 'i' [-Werror=unused-variable]
     long i = hash(key, map->capacity);
          ^
cc1.exe: all warnings being treated as errors
Compilation failed
0ca4c09
sá.,  9 de abr. de 2022 19:35:35: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  11|2
total_score: 50/70
15f731c
sá.,  9 de abr. de 2022 19:39:46: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
test.c: In function 'firstMap':
test.c:453:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
 }
 ^
test.c:511:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:453:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:217:5: error: 'insert_test5' defined but not used [-Werror=unused-function]
 int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
     ^~~~~~~~~~~~
test.c:131:6: error: 'compare_test' defined but not used [-Werror=unused-function]
 void compare_test(){
      ^~~~~~~~~~~~
test.c:125:6: error: 'hash_test3' defined but not used [-Werror=unused-function]
 void hash_test3(){ //no random
      ^~~~~~~~~~
test.c:111:6: error: 'hash_test2' defined but not used [-Werror=unused-function]
 void hash_test2(){ // colisiones
      ^~~~~~~~~~
test.c:100:6: error: 'hash_test1' defined but not used [-Werror=unused-function]
 void hash_test1(){ // posición válida
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1e8f829
